# django-drf-cookiecutter

./: Dockerfile  README.md  Taskfile.yaml  docker-compose.yaml  manage.py  pyproject.toml  start-server.sh
api/: urls.py
cookiecutter/: asgi.py  settings.py  urls.py  wsgi.py
